# rocky-transcript

./: Cargo.toml  transcript.txt
src/: main.rs
