[package]
name = "rocky-transcript"
version = "0.1.0"
authors = ["the6p4c <me@doggirl.gay>"]
edition = "2018"
description = "it's a crate for practicing the rocky script"
license = "GLWTPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.3"
